--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,34 @@ local.properties
 #  !modules/yourmodule
 #
 # ==================
+
+# CMake (in-source) safeguards
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+Testing/
+_deps/
+
+# Ninja/Make
+build.ninja
+.ninja_*
+*.ninja_log
+Makefile
+
+# Compiled artifacts (defense-in-depth)
+*.o
+*.obj
+*.lo
+*.la
+*.a
+*.lib
+*.so
+*.dylib
+*.dll
+*.exe
+*.pdb
+*.ilk
+*.exp
+*.dSYM/
